--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -92,7 +92,7 @@
             </div>
           </div>
 
-          <div class="form-group" ng-if="auth.isReseller()">
+          <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
             <label for="company"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
