--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -123,7 +123,7 @@
 
 <script type="text/javascript" src="js/portal/domains/controller/domainsCrud.controller.js"></script>
 
-<script type="text/javascript" src="js/portal/domains/controller/domains.controller.js"></script>
+<!-- <script type="text/javascript" src="js/portal/domains/controller/domains.controller.js"></script> -->
 <script type="text/javascript" src="js/portal/domains/controller/domainConfigure.controller.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainConfigureAdvanced.controller.js"></script>
 
