--- a/code/parts/domains/_configure_advanced.html
+++ b/code/parts/domains/_configure_advanced.html
@@ -14,13 +14,13 @@
           <div class="row">
             <div class="col-md-12">
               <div class="pull-left">
-                <a ui-sref="index.webApp._domains"
+                <a ui-sref="index.webApp.domains"
                    ng-disabled="_loading"
                    class="btn btn-default">
                   <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
                   Back to List
                 </a>
-                <a ui-sref="index.webApp._domains.edit({id: id})"
+                <a ui-sref="index.webApp.domains.edit({id: id})"
                    ng-disabled="_loading"
                    class="btn btn-info">
 
