--- a/code/parts/domains/_edit.html
+++ b/code/parts/domains/_edit.html
@@ -20,7 +20,7 @@
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
                 Back to List
               </a>
-              <a ui-sref="index.webApp._domains.advanced({id: params.id})"
+              <a ui-sref="index.webApp.domains.advanced({id: params.id})"
                  ng-disabled="_loading"
                  class="btn btn-info">
 
