--- a/code/parts/users/edit.html
+++ b/code/parts/users/edit.html
@@ -122,7 +122,7 @@
                       multiple
                       ng-model="model.domain"
                       ng-disabled="_loading"
-                      ng-options="domain.name as domain.name for domain in domains"></select>
+                      ng-options="domain.domain_name as domain.domain_name for domain in domains"></select>
             </div>
           </div>
 
