--- a/code/dev/parts/domains/domain-select/domain-select.html
+++ b/code/dev/parts/domains/domain-select/domain-select.html
@@ -3,8 +3,8 @@
            ng-disabled="_loading"
            on-select="onModelSelect($model)"
            style="min-width: 300px;" >
-  <ui-select-match placeholder="Select domain">{{$select.selected.domain_name}}</ui-select-match>
-  <ui-select-choices repeat="item in domains | filter: {name: $select.search}">
+  <ui-select-match placeholder="Select domain">{{$select.selected.id}}</ui-select-match>
+  <ui-select-choices repeat="item in domains | filter: {domain_name: $select.search}">
     <small>{{item.domain_name}}</small>
   </ui-select-choices>
 </ui-select>
