--- a/code/parts/domains/_list.html
+++ b/code/parts/domains/_list.html
@@ -95,7 +95,7 @@
                 <span class="sortorder" ng-show="filter.predicate === 'domain_name'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>
-                <a href="" ng-click="order('cname')">CName</a>
+                <a href="" ng-click="order('cname')">CNAME</a>
                 <span class="sortorder" ng-show="filter.predicate === 'cname'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>Last updated</th>
