--- a/code/dev/parts/domains/_edit.html
+++ b/code/dev/parts/domains/_edit.html
@@ -50,6 +50,21 @@
                      placeholder="Domain name">
             </div>
           </div>
+          <div class="form-group">
+            <label for="cname"
+                   class="col-sm-2 control-label"
+                   popover-trigger="mouseenter"
+                   >Domain CNAME</label>
+
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control"
+                     disabled
+                     ng-model="model.cname"
+                     id="cname"
+                     placeholder="Domain CNAME">
+            </div>
+          </div>
           <div class="form-group" ng-if="auth.isReseller()">
             <label for="account_id"
                    popover-append-to-body="{{true}}"
