--- a/code/parts/auth/menu/side-menu-directive.html
+++ b/code/parts/auth/menu/side-menu-directive.html
@@ -1,4 +1,4 @@
-<a href="#/companies" class="side-menu-item" ng-if="user.isReseller()">
+<a href="#/companies" class="side-menu-item" ng-if="user.isReseller() || user.isRevadmin()">
   <i class="glyphicon glyphicon-briefcase"></i>
   Companies
 </a>
