updated alert list

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -32,7 +32,7 @@
   <script src="zendesk.js"></script>
 </head>
 <body data-ng-app="revapm.Portal">
-
+<alert-list></alert-list>
 <div ui-view="layout" class="layout"></div>
 
 
