2fa autofocus on ligin

--- a/code/dev/parts/auth/two-factor-auth-code.html
+++ b/code/dev/parts/auth/two-factor-auth-code.html
@@ -12,7 +12,8 @@
                id="code"
                placeholder="Enter your Code here"
                ng-disabled="data.loading"
-               required>
+               required
+               autofocus>
       </div>
     </div>
   </form>
