--- a/code/parts/layout.html
+++ b/code/parts/layout.html
@@ -19,7 +19,7 @@
           </div>
         </nav>
       </div>
-      <div class="fit">
+      <div class="fit main-layout">
         <div id="top"></div>
         <div class="page-inner" ui-view="page"></div>
       </div>
