--- a/code/parts/auth/two-factor-auth-code.html
+++ b/code/parts/auth/two-factor-auth-code.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
   <alert-list></alert-list>
-  <form class="form-horizontal">
+  <form class="form-horizontal" ng-submit="login()">
     <div class="form-group">
       <div class="col-sm-8 col-sm-offset-2">
         <input type="text"
