--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -125,6 +125,7 @@
 <!-- <script type="text/javascript" src="js/portal/domains/controller/domains.controller.js"></script> -->
 <script type="text/javascript" src="js/portal/domains/controller/domainConfigure.controller.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainConfigureAdvanced.controller.js"></script>
+<script type="text/javascript" src="js/portal/domains/controller/domainVersions.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/companies/companies.module.js"></script>
 <script type="text/javascript" src="js/portal/companies/companies.routes.js"></script>
