--- a/code/dev/parts/domains/_list.html
+++ b/code/dev/parts/domains/_list.html
@@ -128,7 +128,7 @@
                 <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
                   <i class="glyphicon glyphicon-stats"></i>
                 </a>
-                <a ui-sref="{{state}}" ng-if="!item.loading" tooltip="Historical versions">
+                <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Historical versions">
                   <i class="glyphicon glyphicon-book"></i>
                 </a>
               </td>
