--- a/code/dev/parts/domains/versions.html
+++ b/code/dev/parts/domains/versions.html
@@ -30,9 +30,11 @@
           <form class="form-horizontal" ng-show="id">
 
             <div class="form-group">
+
               <div class="col-sm-4">
                 <select name="versions"
                         id="versions"
+                        style="margin-left: 15px"
                         class="form-control"
                         ng-disabled="_loading"
                         ng-model="currentVersion"
