--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -155,6 +155,7 @@
 <script type="text/javascript" src="js/portal/reports/top/topCacheMiss.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top404.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topReferer.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/top/topResponseCodes.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.config.js"></script>
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/reportsProxyTraffic.controller.js"></script>
