--- a/code/dev/parts/reports/top.html
+++ b/code/dev/parts/reports/top.html
@@ -65,7 +65,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <div top-response-codes
+              <div top-5xx
                    fl-os="os"
                    fl-device="devices"
                    fl-country="countries"
