--- a/code/parts/reports/top/top-requests.html
+++ b/code/parts/reports/top/top-requests.html
@@ -25,7 +25,7 @@
       <tbody>
       <tr ng-repeat="item in items">
         <td>
-          <a target="_blank" ng-href="http://{{ngDomain.name}}{{item.path}}">{{item.path}}</a>
+          <a target="_blank" ng-href="http://{{ngDomain.domain_name}}{{item.path}}">{{item.path}}</a>
         </td>
         <td>{{item.count}}</td>
       </tr>
