--- a/code/parts/reports/top-reports.html
+++ b/code/parts/reports/top-reports.html
@@ -190,7 +190,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>H2/H2C HTTP2 Ratio</h3>
+              <h3>H2/H2C/Non-HTTP2 Ratio</h3>
 
               <!--<div class="alert alert-info" ng-if="!http2.data || !http2.data.length">-->
               <div class="alert alert-info" ng-if="!http2 || !http2.length">
