--- a/code/parts/reports/top/top-5xx.html
+++ b/code/parts/reports/top/top-5xx.html
@@ -17,7 +17,7 @@
 <div class="row margin-top" ng-if="ngDomain && codes.length">
 
   <div ng-repeat="code in codes" class="col-md-12">
-    <h4>{{ code.name }}</h4>
+    <h4>{{ code.name }} (Total: {{code.count}})</h4>
     <table class="table">
       <thead>
       <tr>
@@ -26,17 +26,12 @@
       </tr>
       </thead>
       <tbody>
-      <tr ng-repeat="req in code.requests">
-        <td>
-          <a target="_blank" ng-href="http://{{ngDomain.domain_name}}{{req.request}}">{{req.request}}</a>
-        </td>
-        <td>{{req.count}}</td>
-      </tr>
-
-      <tr>
-        <td>TOTAL:</td>
-        <td>{{code.count}}</td>
-      </tr>
+        <tr ng-repeat="req in code.requests">
+          <td>
+            <a target="_blank" ng-href="http://{{ngDomain.domain_name}}{{req.request}}">{{req.request}}</a>
+          </td>
+          <td>{{req.count}}</td>
+        </tr>
       </tbody>
     </table>
   </div>
