'Add app section'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -88,6 +88,7 @@
 <script type="text/javascript" src="js/portal/resources/model/activity.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
 
 <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
 <script type="text/javascript" src="js/portal/auth/auth.config.js"></script>
@@ -114,6 +115,11 @@
 <script type="text/javascript" src="js/portal/users/users.routes.js"></script>
 
 <script type="text/javascript" src="js/portal/users/controller/users.controller.js"></script>
+
+<script type="text/javascript" src="js/portal/apps/apps.module.js"></script>
+<script type="text/javascript" src="js/portal/apps/apps.routes.js"></script>
+<script type="text/javascript" src="js/portal/apps/controller/apps.controller.js"></script>
+<script type="text/javascript" src="js/portal/apps/app-staging-status/appStagingStatus.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/domains/domains.module.js"></script>
 <script type="text/javascript" src="js/portal/domains/domains.routes.js"></script>
