--- a/code/parts/cadmin-top-menu.html
+++ b/code/parts/cadmin-top-menu.html
@@ -1,6 +1,7 @@
 <ul class="nav navbar-nav">
   <!--<li><a href="#">Dashboard</a></li>-->
   <!--<li><a href="#">DNS</a></li>-->
+  <li class="{{apps}}"><a ui-sref="index.apps.ios">Apps</a></li>
   <li class="{{webapp}}"><a ui-sref="index.webApp.domains">Web</a></li>
   <li class="{{reports}}"><a ui-sref="index.reports.proxy">Analytics</a></li>
   <li class="{{account}}"><a ui-sref="index.accountSettings.users">Account Settings</a></li>
