--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -12,6 +12,7 @@
   <link href="bower_components/jsoneditor/dist/jsoneditor.css" rel="stylesheet">
   <link href="bower_components/angular-chart.js/dist/angular-chart.min.css" rel="stylesheet">
   <link href="bower_components/ui-select/dist/select.min.css" rel="stylesheet">
+  <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
   <link rel="stylesheet" href="//fk.github.io/select2-bootstrap-css/css/select2-bootstrap.css">
 
@@ -119,6 +120,8 @@
 <script type="text/javascript" src="js/portal/apps/apps.module.js"></script>
 <script type="text/javascript" src="js/portal/apps/apps.routes.js"></script>
 <script type="text/javascript" src="js/portal/apps/controller/apps.controller.js"></script>
+<script type="text/javascript" src="js/portal/apps/controller/appVersions.controller.js"></script>
+<script type="text/javascript" src="js/portal/apps/controller/appEdit.controller.js"></script>
 <script type="text/javascript" src="js/portal/apps/app-staging-status/appStagingStatus.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/domains/domains.module.js"></script>
