--- a/code/parts/apps/new.html
+++ b/code/parts/apps/new.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="pull-left">
-              <a ui-sref="{{state.parent}}"
+              <a ui-sref="^"
                  ng-disabled="_loading"
                  class="btn btn-info">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
@@ -75,13 +75,13 @@
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <button class="btn btn-success"
-                      ng-disabled="_loading"
+                      ng-disabled="_loading || createForm.$invalid"
                       ng-click="createApp(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Register
               </button>
-              <a ui-sref="index.apps.ios" class="btn btn-default">
+              <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
