--- a/code/dev/parts/domains/versions.html
+++ b/code/dev/parts/domains/versions.html
@@ -48,8 +48,8 @@
             <div class="form-group">
               <div class="col-md-12">
                 <pre class="col-md-12"
-                     id="json"
-                     disabled>{{obj.data}}</pre>
+                hljs
+                hljs-source = "obj.data"></pre>
 
                 <div class="col-sm-12" style="margin-top: 15px">
                   <a ui-sref="index.webApp.domains"
