--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -84,6 +84,26 @@
 
       <div class="panel-body">
         <form name="editForm" class="form-horizontal">
+          <div class="form-group"
+               ng-class="{ 'has-error': editForm.app_name.$invalid &&
+                editForm.app_name.$dirty }">
+            <label for="app_name"
+                   popover-append-to-body="{{true}}"
+                   class="col-sm-2 control-label"
+                   popover-trigger="mouseenter"
+                   popover="App configuration refresh interval in seconds "
+            >Name</label>
+
+            <div class="col-sm-10">
+              <input type="text" class="form-control"
+                     name="app_name"
+                     ng-disabled="_loading"
+                     ng-model="model.app_name"
+                     ng-maxlength="50"
+                     id="app_name">
+              </input>
+            </div>
+          </div>
           <div class="form-group">
             <label for="operation_mode"
                    popover-append-to-body="{{true}}"
