--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -97,7 +97,7 @@
                 <span class="sortorder" ng-show="filter.predicate === 'app_platform'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>
-                <a href="" ng-click="order('app_published_version')">Last published<br> config</a>
+                <a href="" ng-click="order('app_published_version')">Version</a>
                 <span class="sortorder" ng-show="filter.predicate === 'app_published_version'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>
@@ -105,7 +105,7 @@
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>SDK key</th>
-              <th>Staging/Production<br> Status</th>
+              <th>Status</th>
               <th></th>
             </tr>
             </thead>
