--- a/code/parts/domains/_list.html
+++ b/code/parts/domains/_list.html
@@ -101,7 +101,7 @@
                 <a href="" ng-click="order('updated_at')">Last updated</a>
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
-              <th>Staging/Global Status</th>
+              <th>Status</th>
               <th></th>
             </tr>
             </thead>
