--- a/code/parts/apps/edit.html
+++ b/code/parts/apps/edit.html
@@ -339,7 +339,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="{{domainsListPlaceholder}}"
+                placeholder="Please provision a domain first..."
                 ng-if="!domainList.length"
                 disabled>
             </div>
