--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -77,8 +77,8 @@
           </div>
         </div>
         <div class="panel-body">
-          <div class="alert alert-info" ng-if="apps.length == 0 && !_loading">
-            Currently there are not apps registered in the system
+          <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
+            Currently there are no apps registered in the system
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
