--- a/code/parts/domains/list.html
+++ b/code/parts/domains/list.html
@@ -51,7 +51,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently there are not domains registered in the system
+            Currently there are no domains registered in the system
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
