--- a/code/parts/shared/crud/pagination.html
+++ b/code/parts/shared/crud/pagination.html
@@ -1,8 +1,8 @@
- <nav  ng-hide="page.current == 1 && page.current == page.pages.length">
+ <nav  ng-hide="page.current == 1 && page.current == page.pages.length || !page.pages.length">
       <ul class="pagination">
                 <li class="first">
           <a href="" ng-click="goToPage(1)">
-            First
+            First {{page}}
           </a>
         </li>
         <li class="previous" ng-class = "{disabled: (page.current == 1)}">
