--- a/code/parts/shared/crud/pagination.html
+++ b/code/parts/shared/crud/pagination.html
@@ -2,7 +2,7 @@
       <ul class="pagination">
                 <li class="first">
           <a href="" ng-click="goToPage(1)">
-            First {{page}}
+            First
           </a>
         </li>
         <li class="previous" ng-class = "{disabled: (page.current == 1)}">
