fix autofocus & node_modules

--- a/code/dev/parts/domains/_edit.html
+++ b/code/dev/parts/domains/_edit.html
@@ -44,6 +44,7 @@
               <input type="text"
                      class="form-control"
                      disabled
+                     autofocus
                      ng-model="model.domain_name"
                      id="domain_name"
                      placeholder="Domain name">
