--- a/code/dev/parts/companies/edit.html
+++ b/code/dev/parts/companies/edit.html
@@ -29,6 +29,7 @@
             <label for="name" class="col-sm-2 control-label">Company name</label>
             <div class="col-sm-10">
               <input type="text"
+                     autofocus
                      class="form-control"
                      ng-disabled="_loading"
                      ng-model="model.companyName"
