--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -35,6 +35,7 @@
 
             <div class="col-sm-10">
               <input type="text"
+                     autofocus
                      class="form-control"
                      id="email"
                      placeholder="Email"
