--- a/code/dev/parts/domains/_list.html
+++ b/code/dev/parts/domains/_list.html
@@ -67,10 +67,10 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <label for="search">Search:&nbsp;</label>
-                    <input type="text" class="form-control" id="search" placeholder="" ng-model="quickFilter.domain_name"
+                    <input type="text" class="form-control" id="search" placeholder="" ng-model="filter.filter.domain_name"
                            ng-change="checkFilterPage()">&nbsp;&nbsp;
-                    <i class="glyphicon glyphicon-remove" ng-show="quickFilter != ''"
-                       ng-click="quickFilter = ''"></i>
+                    <i class="glyphicon glyphicon-remove" ng-show="filter.filter != ''"
+                       ng-click="filter.filter = ''"></i>
                   </div>
                 </form>
               </div>
@@ -107,7 +107,7 @@
             </thead>
             <tbody>
             <tr
-              ng-repeat="item in records | filter:quickFilter | orderBy:filter.predicate:filter.reverse | limitTo:filter.limit:filter.skip track by $index">
+              ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
               <td>{{item.domain_name}}</td>
               <td>{{item.cname}}</td>
               <td>{{item.updated_at | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
