--- a/code/dev/parts/domains/list0.html
+++ b/code/dev/parts/domains/list0.html
@@ -39,10 +39,10 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <label for="search">Search:&nbsp;</label>
-                    <input type="text" class="form-control" id="search" placeholder="" ng-model="quickFilter.name"
+                    <input type="text" class="form-control" id="search" placeholder="" ng-model="filter.filter.name"
                            ng-change="checkFilterPage()">&nbsp;&nbsp;
-                    <i class="glyphicon glyphicon-remove" ng-show="quickFilter != ''"
-                       ng-click="quickFilter = ''"></i>
+                    <i class="glyphicon glyphicon-remove" ng-show="filter.filter != ''"
+                       ng-click="filter.filter = ''"></i>
                   </div>
                 </form>
               </div>
@@ -78,7 +78,7 @@
             </thead>
             <tbody>
             <tr
-              ng-repeat="item in records | filter:quickFilter | orderBy:filter.predicate:filter.reverse | limitTo:filter.limit:filter.skip track by $index">
+              ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
               <td>{{item.name}}</td>
               <td>{{item.sync_status}}</td>
               <td>{{item.cname}}</td>
