--- a/code/parts/menu/analitycs-side.html
+++ b/code/parts/menu/analitycs-side.html
@@ -10,6 +10,10 @@
   <i class="glyphicon glyphicon-stats"></i>
   Top Objects
 </a>
+<a ui-sref-active="active" ui-sref="index.reports.fbt" class="side-menu-item">
+  <i class="glyphicon glyphicon-stats"></i>
+  FBT Reports
+</a>
 <a ui-sref-active="active" ui-sref="index.reports.heatmaps" class="side-menu-item">
   <i class="glyphicon glyphicon-fire"></i>
   Traffic Heatmaps
@@ -18,9 +22,3 @@
   <i class="glyphicon glyphicon-fire"></i>
   RTT Heatmaps
 </a>
-<!--
-<a ui-sref-active="active" ui-sref="index.reports.gbt_heatmaps" class="side-menu-item">
-  <i class="glyphicon glyphicon-fire"></i>
-  GBT Heatmaps
-</a>
- -->
