--- a/code/parts/reports/fbt.html
+++ b/code/parts/reports/fbt.html
@@ -26,6 +26,9 @@
           <div class="row">
             <div class="col-lg-12">
               <div fbt-average-chart
+                   fl-os="oses"
+                   fl-device="devices"
+                   fl-country="countries"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -33,6 +36,9 @@
           <div class="row">
             <div class="col-lg-12">
               <div fbt-distribution-chart
+                   fl-os="oses"
+                   fl-device="devices"
+                   fl-country="countries"
                    ng-domain="domain"></div>
             </div>
           </div>
