FBT heatmap report, some bugs erased

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -166,6 +166,7 @@
 <script type="text/javascript" src="js/portal/reports/chart/proxyTrafficChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/fbtAverageChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/fbtDistributionChart.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/chart/fbtHeatmapChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topRequests.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topCacheMiss.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top404.directive.js"></script>
