--- a/code/dev/parts/reports/fbt.html
+++ b/code/dev/parts/reports/fbt.html
@@ -33,11 +33,21 @@
             </div>
           </div>
 
+          <hr>
           <div class="row">
             <div class="col-lg-12">
               <div fbt-distribution-chart
                    fl-os="oses"
                    fl-device="devices"
+                   fl-country="countries"
+                   ng-domain="domain"></div>
+            </div>
+          </div>
+
+          <hr>
+          <div class="row">
+            <div class="col-lg-12">
+              <div fbt-heatmap-chart
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
