mobile reports, bones

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -167,6 +167,9 @@
 <script type="text/javascript" src="js/portal/reports/chart/fbtAverageChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/fbtDistributionChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/fbtHeatmapChart.directive.js"></script>
+
+<script type="text/javascript" src="js/portal/reports/chart/mobileHitsChart.directive.js"></script>
+
 <script type="text/javascript" src="js/portal/reports/top/topRequests.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topCacheMiss.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top404.directive.js"></script>
@@ -178,6 +181,7 @@
 <script type="text/javascript" src="js/portal/reports/controller/topReportsTraffic.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/topObjects.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/fbtReports.controller.js"></script>
+<script type="text/javascript" src="js/portal/reports/controller/mobileReports.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/reports/controller/trafficHeatmaps.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/lmRTTHeatmaps.controller.js"></script>
