--- a/code/dev/parts/menu/analitycs-side.html
+++ b/code/dev/parts/menu/analitycs-side.html
@@ -14,6 +14,10 @@
   <i class="glyphicon glyphicon-stats"></i>
   FBT Reports
 </a>
+<a ui-sref-active="active" ui-sref="index.reports.mob" class="side-menu-item">
+  <i class="glyphicon glyphicon-phone"></i>
+  Mobile Analytics
+</a>
 <a ui-sref-active="active" ui-sref="index.reports.heatmaps" class="side-menu-item">
   <i class="glyphicon glyphicon-fire"></i>
   Traffic Heatmaps
