--- a/code/parts/apps/list.html
+++ b/code/parts/apps/list.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="panel-body">
-          <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
+          <div class="alert alert-info" ng-if="filteredRecords.length == 0 && !_loading">
             Currently there are no apps registered in the system
           </div>
           <div class="alert alert-info" ng-if="_loading">
